--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,15 @@ version: '3.9'
 services:
   app:
     container_name: app
+    image: marcelofabianov/golang
     restart: always
+    working_dir: /app
     build:
       context: ./_docker
       dockerfile: Dockerfile
     volumes:
-      - ./app:/app
-      - ./_docker/zshrc:/home/dev/.zshrc
+      - .:/app
+      - ./_docker/.zshrc:/home/dev/.zshrc
     ports:
       - "8888:8888"
     networks:
